# SliceOfML

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: general.yml  release.yml
sliceofml/: api.py  apikey.py  cli.py  config.py
soml/: api.py  apikey.py  cli.py  config.py  display.py
tests/: test_soml.py
