[tool.poetry]
name = "soml"
version = "0.1.0"
description = ""
authors = ["FL33TW00D <chris@notia.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
requests-oauthlib = "^1.3.1"
rich = "^12.4.4"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
soml = "soml.cli:cli"
